Fixed validation (alert) for first step. Fixed bug in cropping with z-index and moved button up. Hacky but works?

--- a/Migree.Web/static/less/views/register.less
+++ b/Migree.Web/static/less/views/register.less
@@ -11,6 +11,15 @@
     	max-width: 260px;
 	}
 }
+.ui-view-image-view {
+	overflow:hidden;
+	z-index: 10;
+	.cropbutton	{
+		top:-147px;
+		position:relative;
+	}
+}
+
 .step{
 	display: none;
 
